--- a/veidaai/app/page.module.css
+++ b/veidaai/app/page.module.css
@@ -381,6 +381,7 @@ img.neuronIcon {
 
   #landingSection h1 {
     font-size: 1.5rem !important;
+    line-height: 2rem !important;
     white-space: pre-line;
   }
 
