.redesign class descendants given access to design system

--- a/veidaai/app/globals.css
+++ b/veidaai/app/globals.css
@@ -297,7 +297,7 @@ button.tertiary {
 
 
 /** DESIGN SYSTEM IMPORTED FROM FIGMA **/
-.redesign {
+.redesign, .redesign * {
   /* TYPOGRAPHY */
   /* font-families */
   --header-fam: "Monument Extended", sans-serif ;
